feat: Recaptcha on submitting form.

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,8 @@ DB_PORT=5432
 # Redis settings
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_DB=0 
+REDIS_DB=0
+
+# reCAPTCHA settings
+RECAPTCHA_SITE_KEY=your-site-key-here
+RECAPTCHA_SECRET_KEY=your-secret-key-here 
