--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ django-cors-headers==4.3.1
 django-extensions==3.2.3
 django-auditlog==2.3.0
 django-filter==23.5
-requests==2.31.0 
+requests==2.31.0
+google-cloud-recaptcha-enterprise==1.28.1
